# Badminton_GURU

./: .replit  README.md  config.py  main.py  pyproject.toml  requirements.txt
cogs/: help.py  interactive_match.py  match.py  match_engine.py  players.py
